<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <requestFocus />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/menuSate"
        android:layout_width="66dp"
        android:layout_height="66dp"
        android:background="@drawable/ripple"
        android:padding="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_home_menu" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="66dp"
        android:text="@string/api"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/menuSate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/menuSate"
        app:layout_constraintTop_toTopOf="@+id/menuSate" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menuSate">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/output"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/outputValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|start"
                android:hint="@string/output"
                android:inputType="none"
                android:lines="6"
                android:maxLines="6"
                android:scrollbars="vertical"
                android:textIsSelectable="true"
                android:cursorVisible="false"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical"
                android:padding="20dp"
                app:divider="@drawable/divider_20"
                app:showDividers="middle">

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/set_offline_mode_switch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/set_offline_mode_enabled_switch_title" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/set_background_tracking_mode_switch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/set_background_tracking_mode_enabled_switch_title" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/set_tracking_mode_switch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/set_tracking_mode_enabled_switch_title" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/debug_validate"
                    style="@style/ButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/debug_validate_button_title" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/register_deeplink"
                    style="@style/ButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/register_deeplink_button_title" />


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/get_referrer"
                    style="@style/ButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/get_referrer_button_title" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/get_referrer_value"
                    style="@style/ButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/get_referrer_value_button_title" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/status"
                    style="@style/ButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/status_button_title" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/random_push_token"
                    style="@style/ButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/random_push_token_button_title" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/random_user_id"
                    style="@style/ButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/random_user_id_button_title" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/random_device_id"
                    style="@style/ButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/random_device_id_button_title" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/providers"
                    style="@style/ButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/providers_button_title" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </ScrollView>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>
