<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/menuSate"
        android:layout_width="66dp"
        android:layout_height="66dp"
        android:background="@drawable/ripple"
        android:padding="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_home_menu" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/changeTypes"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginHorizontal="16dp"
        android:paddingHorizontal="32dp"
        android:text="@string/types"
        app:icon="@android:drawable/ic_popup_sync"
        app:layout_constraintBottom_toBottomOf="@+id/menuSate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toEndOf="@+id/menuSate"
        app:layout_constraintTop_toTopOf="@+id/menuSate" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menuSate">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/testButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/ebony_clay"
                    android:text="@string/button"
                    app:cornerRadius="10dp"
                    app:rippleColor="@color/item_blue" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/testText"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button"
                    android:gravity="center"
                    android:text="@string/text"
                    android:textColor="@color/white" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/image_button" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/testImageButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/button"
                    android:contentDescription="@string/image_button"
                    android:src="@drawable/img_product_test" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/image" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/testImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/button"
                    android:contentDescription="@string/image"
                    app:srcCompat="@drawable/img_product_test" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/group" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/testGroup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="5dp">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button"
                        android:orientation="horizontal">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:id="@+id/image"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/image"
                            app:srcCompat="@drawable/img_product_test" />

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:orientation="vertical">

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/item"
                                android:textColor="@color/white"
                                android:textSize="18sp" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/price"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:gravity="center"
                                android:text="@string/price_50"
                                android:textColor="@color/white"
                                android:textSize="18sp" />

                        </androidx.appcompat.widget.LinearLayoutCompat>

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.cardview.widget.CardView>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>